Update git workflow / fix bugs spotted by inspection

--- a/.github/workflows/validate_contractlist.yml
+++ b/.github/workflows/validate_contractlist.yml
@@ -2,6 +2,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
 name: Pull request workflow
 jobs:
   validate_contractlists:
